Add remove more spam content

--- a/options.html
+++ b/options.html
@@ -9,6 +9,21 @@
     <input type="checkbox" id="hide"/>
     Hide replies, instead of transparent them. (could trigger rate limit error)
 </label>
+<br>
+<label>
+    <input type="checkbox" id="emoji"/>
+    Hide replies with only emojis
+</label>
+<br>
+<label>
+    <input type="checkbox" id="affiliate"/>
+    Hide replies with affiliate links
+</label>
+<br>
+<label>
+    <input type="checkbox" id="sub_post"/>
+    Hide replies with sub posts
+</label>
 
 <hr/>
 
